# KAproject

./: .env  .gitignore  app.py  data.txt  data_processor.py  data_retrieval.py  docker-compose.yml  dockerfile  logger.py  main.py  posts.txt  process_log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: comments.txt
tests/: test_api_client.py  test_data_processor.py  test_data_retrieval.py  test_file_write.py  test_general.py  test_main.py
